--- a/css/styles.css
+++ b/css/styles.css
@@ -871,3 +871,95 @@ footer {
   background-color: #ffffff;
   cursor: pointer;
 }
+.newsletter {
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  display: flex;
+  margin-left: auto;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 570px;
+  padding-bottom: 20px;
+}
+.newsletter-label {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.newsletter-input {
+  display: block;
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  margin-top: 20px;
+  background-color: #2f303a;
+  padding-left: 16px;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: white;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.newsletter-label:focus-within,
+.newsletter-label:hover {
+  color: #2196f3;
+}
+.newsletter-input:focus-within {
+  border: 1px solid #2196f3;
+  outline: none;
+}
+.newsletter-label:hover .newsletter-input {
+  border: 1px solid #2196f3;
+}
+.newsletter-input::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+.newsletter-button {
+  position: relative;
+  display: block;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background-color: #2196f3;
+  cursor: pointer;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  width: 200px;
+  height: 50px;
+  text-align: left;
+  padding-left: 42px;
+}
+.newsletter-button:hover,
+.newsletter-button:focus {
+  background-color: #f5f4fa;
+  color: #212121;
+}
+.newsletter-button::after {
+  width: 24px;
+  content: "";
+  height: 24px;
+  position: absolute;
+  top: 13px;
+  left: 148px;
+  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath id='icon send' d='M24 0L0 13.5L7.66994 16.3407L19.5 5.25002L10.5017 17.3896L10.509 17.3923L10.5 17.3896V24.0001L14.8013 18.982L20.2501 21.0001L24 0Z' fill='white'/%3E%3C/svg%3E");
+  transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.newsletter-button:hover::after {
+  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath id='icon send' d='M24 0L0 13.5L7.66994 16.3407L19.5 5.25002L10.5017 17.3896L10.509 17.3923L10.5 17.3896V24.0001L14.8013 18.982L20.2501 21.0001L24 0Z' fill='black'/%3E%3C/svg%3E");
+}
