--- a/css/styles.css
+++ b/css/styles.css
@@ -1125,7 +1125,7 @@ footer {
   display: block;
   visibility: visible;
 }
-.checkbox-hidden {
+.checkbox-is-hidden {
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
