--- a/css/styles.css
+++ b/css/styles.css
@@ -1111,18 +1111,25 @@ footer {
   border: 2.5px solid #212121;
   margin-right: 2px;
   border-radius: 4px;
+  fill: #ffffff;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.acceptance-checked:focus,
-.acceptance-checked:hover,
-.acceptance-checked:active {
-  border: none;
 }
 
 .checked-background {
   display: block;
   visibility: hidden;
+  fill: #ffffff;
+  background-color: #2196f3;
   transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checked-background:active,
+.checked-background:focus,
+.checked-background:hover {
+  background-color: #2196f3;
+  fill: #ffffff;
+  background-image: url(../images/icons.svg/icon-checked);
+  border: 1px solid #ffffff;
 }
 
 .acceptance-input {
@@ -1130,13 +1137,15 @@ footer {
   padding: 0;
   margin: 0;
   position: absolute;
-  background: #ffffff;
-  border: 0.2px solid #ffffff;
-}
-.acceptance-input:checked ~ .acceptance-checked {
   visibility: hidden;
-  display: block;
-  padding-top: 0;
+}
+
+.acceptance-input:checked ~ .checked-background {
+  visibility: visible;
+  scale: 1.2;
+  background-image: url(../images/icons.svg/icon-checked);
+  fill: #ffffff;
+  background-color: #2196f3;
 }
 
 .checkbox-is-hidden {
