checkbox correction part 3

--- a/css/styles.css
+++ b/css/styles.css
@@ -1097,6 +1097,7 @@ footer {
   color: #757575;
   margin-bottom: 30px;
   margin-top: 20px;
+  gap: 9px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1106,10 +1107,15 @@ footer {
 }
 
 .acceptance-checked {
-  width: 17px;
-  height: 17px;
+  align-items: baseline;
+  justify-content: left;
+  text-align: center;
+  margin-right: 9px;
+  width: 16px;
+  height: 15px;
+  gap: 9px;
   border: 2.5px solid #212121;
-  margin-right: 2px;
+  margin-left: 2px;
   border-radius: 4px;
   fill: #ffffff;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1117,7 +1123,11 @@ footer {
 
 .checked-background {
   display: block;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
   visibility: hidden;
+  margin-right: 9px;
   fill: #ffffff;
   background-color: #2196f3;
   transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1130,10 +1140,11 @@ footer {
   fill: #ffffff;
   background-image: url(../images/icons.svg/icon-checked);
   border: 1px solid #ffffff;
+  margin-right: 9px;
 }
 
 .acceptance-input {
-  display: flex;
+  display: flex-end;
   padding: 0;
   margin: 0;
   position: absolute;
@@ -1142,10 +1153,14 @@ footer {
 
 .acceptance-input:checked ~ .checked-background {
   visibility: visible;
-  scale: 1.2;
+  scale: 1.19;
+  margin-right: 90px;
   background-image: url(../images/icons.svg/icon-checked);
   fill: #ffffff;
   background-color: #2196f3;
+}
+.acceptance-text {
+  gap: 9px;
 }
 
 .checkbox-is-hidden {
